got fly deploy working
